Add format_fluostar.omega_data() & import_cell_profiler_data()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(get_complex_anova)
 export(get_complex_anova_beta)
 export(get_mixed_mod_anova)
 export(get_sign_mod)
+export(import_cell_profiler_data)
 export(restore_amp_names)
 export(stepwise_regression)
 export(stepwise_regression_beta)
@@ -40,6 +41,7 @@ importFrom(dplyr,near)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_all)
 importFrom(dplyr,rename_at)
+importFrom(dplyr,rename_if)
 importFrom(dplyr,select)
 importFrom(dplyr,select_if)
 importFrom(dplyr,ungroup)
@@ -91,6 +93,7 @@ importFrom(readr,write_csv)
 importFrom(readxl,read_excel)
 importFrom(rlang,"!!")
 importFrom(rlang,":=")
+importFrom(rlang,as_list)
 importFrom(rlang,enexpr)
 importFrom(rlang,enexprs)
 importFrom(rlang,enquo)
@@ -134,3 +137,4 @@ importFrom(tidyselect,all_of)
 importFrom(tidyselect,everything)
 importFrom(tidyselect,matches)
 importFrom(tidyselect,starts_with)
+importFrom(xml2,read_xml)
