add import package xml2 in DESCRIPTION

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,7 +93,6 @@ importFrom(readr,write_csv)
 importFrom(readxl,read_excel)
 importFrom(rlang,"!!")
 importFrom(rlang,":=")
-importFrom(rlang,as_list)
 importFrom(rlang,enexpr)
 importFrom(rlang,enexprs)
 importFrom(rlang,enquo)
@@ -137,4 +136,5 @@ importFrom(tidyselect,all_of)
 importFrom(tidyselect,everything)
 importFrom(tidyselect,matches)
 importFrom(tidyselect,starts_with)
+importFrom(xml2,as_list)
 importFrom(xml2,read_xml)
