--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
            family = "Vallin",
            role = c("aut", "cre"),
            email = "ben.vallin@gmail.com")
-Description: This package provides usefull R functions for analysing biological data.
+Description: This package provides useful R functions for analysing biological data.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -36,6 +36,7 @@ Imports:
     stringr,
     tibble,
     tidyr,
-    tidyselect
+    tidyselect,
+    xml2
 URL: https://github.com/benvallin/banban
 BugReports: https://github.com/benvallin/banban/issues
