mod import_cell_profiler_data()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ importFrom(car,Anova)
 importFrom(car,avPlots)
 importFrom(car,leveneTest)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,desc)
