--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(get_complex_anova_beta)
 export(get_mixed_mod_anova)
 export(get_sign_mod)
 export(import_cell_profiler_data)
+export(import_cell_profiler_data_new)
 export(restore_amp_names)
 export(stepwise_regression)
 export(stepwise_regression_beta)
