new function for flow

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(get_2c_comp)
 export(get_avp)
 export(get_complex_anova)
 export(get_complex_anova_beta)
+export(get_inrange_flowdata)
 export(get_mixed_mod_anova)
 export(get_sign_mod)
 export(import_cell_profiler_data)
@@ -49,6 +50,8 @@ importFrom(dplyr,select_if)
 importFrom(dplyr,ungroup)
 importFrom(emmeans,contrast)
 importFrom(emmeans,emmeans)
+importFrom(flowCore,Subset)
+importFrom(flowCore,keyword)
 importFrom(forcats,as_factor)
 importFrom(generics,setdiff)
 importFrom(generics,tidy)
