--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ importFrom(dplyr,ungroup)
 importFrom(emmeans,contrast)
 importFrom(emmeans,emmeans)
 importFrom(flowCore,Subset)
+importFrom(flowCore,fsApply)
 importFrom(flowCore,keyword)
 importFrom(forcats,as_factor)
 importFrom(generics,setdiff)
