--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ importFrom(emmeans,emmeans)
 importFrom(flowCore,Subset)
 importFrom(flowCore,fsApply)
 importFrom(flowCore,keyword)
+importFrom(flowCore,rectangleGate)
 importFrom(forcats,as_factor)
 importFrom(generics,setdiff)
 importFrom(generics,tidy)
