--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(get_complex_anova)
 export(get_complex_anova_beta)
 export(get_inrange_flowdata)
 export(get_mixed_mod_anova)
+export(get_parameter_voltage)
 export(get_sign_mod)
 export(import_cell_profiler_data)
 export(import_cell_profiler_data_new)
