--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(get_parameter_voltage)
 export(get_sign_mod)
 export(import_cell_profiler_data)
 export(import_cell_profiler_data_new)
+export(merge_flowdata)
 export(restore_amp_names)
 export(stepwise_regression)
 export(stepwise_regression_beta)
@@ -52,8 +53,10 @@ importFrom(dplyr,ungroup)
 importFrom(emmeans,contrast)
 importFrom(emmeans,emmeans)
 importFrom(flowCore,Subset)
+importFrom(flowCore,exprs)
 importFrom(flowCore,fsApply)
 importFrom(flowCore,keyword)
+importFrom(flowCore,read.FCS)
 importFrom(flowCore,rectangleGate)
 importFrom(forcats,as_factor)
 importFrom(generics,setdiff)
