--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,11 +14,11 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Depends: R (>= 3.1.0)
 Imports: 
-    EnvStats,
-    MASS,
     car,
     dplyr,
     emmeans,
+    EnvStats,
+    flowCore,
     forcats,
     generics,
     ggplot2,
@@ -26,6 +26,7 @@ Imports:
     lmerTest,
     lmtest,
     magrittr,
+    MASS,
     purrr,
     readr,
     readxl,
