--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,9 @@ export(get_avp)
 export(get_complex_anova)
 export(get_inrange_flowdata)
 export(get_mixed_mod_anova)
-export(get_parameter_voltage)
+export(get_shared_keywords)
 export(get_sign_mod)
+export(get_voltage_settings)
 export(import_cell_profiler_data)
 export(merge_flowdata)
 export(restore_amp_names)
