--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ importFrom(flowCore,fsApply)
 importFrom(flowCore,keyword)
 importFrom(flowCore,read.FCS)
 importFrom(flowCore,rectangleGate)
+importFrom(flowWorkspace,lapply)
 importFrom(forcats,as_factor)
 importFrom(generics,setdiff)
 importFrom(generics,tidy)
