--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,10 @@
 export(calculate_n0)
 export(calculate_rq)
 export(choose_on_aic)
+export(compute_ddct)
 export(format_fluostar.omega_data)
 export(format_ms_data)
+export(format_sop)
 export(gather_amplicons)
 export(get_2c_comp)
 export(get_avp)
